--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
+-i https://pypi.org/simple
+certifi==2022.12.7 ; python_version >= '3.6'
+charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
+click==8.1.3 ; python_version >= '3.7'
 flask==2.2.2
 icalendar==5.0.3
-idna==3.4
-importlib-metadata==5.1.0
-itsdangerous==2.1.2
-jinja2==3.1.2
-markupsafe==2.1.1
-python-dateutil==2.8.2
+idna==3.4 ; python_version >= '3.5'
+importlib-metadata==5.1.0 ; python_version < '3.10'
+itsdangerous==2.1.2 ; python_version >= '3.7'
+jinja2==3.1.2 ; python_version >= '3.7'
+markupsafe==2.1.1 ; python_version >= '3.7'
+python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2022.6
 requests==2.28.1
-six==1.16.0
-urllib3==1.26.13
-werkzeug==2.2.2
-zipp==3.11.0
+six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+werkzeug==2.2.2 ; python_version >= '3.7'
+zipp==3.11.0 ; python_version >= '3.7'
